# SpoolSvHook

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  SpoolSvHook.cpp  SpoolSvHook.h
ALPCInjector/: ALPCInjector.cpp  ALPCInjector.hpp  CMakeLists.txt  main.cpp
Internal/: ALL_BUILD.vcxproj  CMakeLists.txt  cmake_install.cmake  dllmain.cpp
Internal/vs/: ALL_BUILD.vcxproj  CMakeCache.txt  Internal.sln  Internal.vcxproj  Internal.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Loader/: CMakeLists.txt
Payload/: build.bat  payload.c
ProtoArtefacts/: CMakeLists.txt
RE_ntlib/: ntddk.h  nttpp.h
SpoolerStub/: CBootstrap.cpp  CBootstrap.hpp  CHook.hpp  CHooks.cpp  CHooks.hpp  CJobInfo.cpp  CJobInfo.hpp  CJobService.cpp  CJobService.hpp  CMakeLists.txt  CPortMon.cpp  CPortMon.hpp  CPrintJob.cpp  CPrintJob.hpp  CPrinter.cpp  CPrinter.hpp  CRemotePrinter.cpp  CRemotePrinter.hpp  CSpoolClient.cpp  CSpoolClient.hpp  CSpoolSVHooks.cpp  CSpoolSVHooks.hpp  CWebSocket.cpp  CWebSocket.hpp  Utilities.cpp  Utilities.hpp  dllmain.cpp  inc.hpp  marshaling.cpp  marshaling.h  test.proto
SpoolerStub/Hooking/: HookFunction.cpp  HookFunction.h  Hooking.Invoke.h  Hooking.Patterns.cpp  Hooking.Patterns.h  Hooking.cpp  Hooking.h  IATHook.cpp  IATHook.h
vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  SpoolSvHook.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
vs/ALPCInjector/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ALPCInjector.sln  ALPCInjector.vcxproj  ALPCInjector.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
vs/Internal/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Internal.sln  Internal.vcxproj  Internal.vcxproj.filters
vs/Libs/minhook/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  minhook.sln  minhook.vcxproj  minhook.vcxproj.filters
vs/Libs/spdlog/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  spdlog.sln  spdlog.vcxproj  spdlog.vcxproj.filters
